--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,4 +7,5 @@ services:
       - .:/app
     environment:
       - OPEN_AI_KEY=${OPEN_AI_KEY}
+      - GITHUB_TOKEN=${GITHUB_TOKEN}
     restart: always
